--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "devDependencies": {
     "tsx": "^3.12.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@fastify/cors": "^8.2.0",
+    "axios": "^1.1.3",
+    "fastify": "^4.9.2",
+    "zod": "^3.19.1"
   }
 }
