--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "node build/server.js"
+    "start": "npx tsc && node build/server.js"
   },
   "repository": {
     "type": "git",
