--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Moises-Bruce/shaw-backend#readme",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "tsx": "^3.12.1",
     "typescript": "^4.8.4"
   },
